--- a/TriadApp/templates/TriadApp/admin/admin.html
+++ b/TriadApp/templates/TriadApp/admin/admin.html
@@ -68,10 +68,10 @@
                             <span class="ml-2">Employee Management</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="{% url 'manage_inventory' %}" 
+                    <li></li>
+                        <a href="{% url 'manage_categories' %}" 
                            class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
-                            <span class="ml-2">Inventory Management</span>
+                            <span class="ml-2">Category Management</span>
                         </a>
                     </li>
                     <li>
@@ -80,12 +80,7 @@
                             <span class="ml-2">Supplier Management</span>
                         </a>
                     </li>
-                    <li></li>
-                        <a href="{% url 'manage_categories' %}" 
-                           class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
-                            <span class="ml-2">Category Management</span>
-                        </a>
-                    </li>
+                 
                     <li>
                         <a href="{% url 'manage_supplies' %}" 
                            class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
@@ -93,8 +88,18 @@
                         </a>
                     </li>
 
-               
-                   
+                    <li>
+                        <a href="{% url 'manage_inventory' %}" 
+                           class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
+                            <span class="ml-2">Product Management</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'admin_reports' %}" 
+                           class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
+                            <span class="ml-2">Reports</span>
+                        </a>
+                    </li>
                 
                 </ul>
             </nav>
